tests/resource/valid/control_flow/for_over_range_from_func.mamba
def f() -> Range => 0 .. 2 .. 1

for x in f() do
    print(x)
