tests/resource/invalid/type/function/too_many_arg_with_default.mamba
def f(x: Int, y: Int := 5) -> Int => x + y

f(1, 2, 3)
